Attempt to fix emoji being clipped out on mobile

--- a/src/styles/NavStyles.module.css
+++ b/src/styles/NavStyles.module.css
@@ -26,6 +26,7 @@
   width: max-content;
   cursor: pointer;
   display: inline-block;
+  overflow: visible;
 }
 
 .nav_link:not(:last-child) {
